--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'eclipse'
 apply plugin: 'jacoco'
 
 version = '0.0.1'
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -13,6 +13,10 @@ repositories {
 dependencies {
     // common
     compile 'com.google.guava:guava:18.+'
+
+    // logging
+    compile 'ch.qos.logback:logback-core:1.1.+'
+    compile 'ch.qos.logback:logback-classic:1.1.+'
 
     // testing
     testCompile 'junit:junit:4.+'
