--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,14 @@ repositories {
 
 dependencies {
     // common
-    compile 'com.google.guava:guava:18.+'
+    compile 'com.google.guava:guava:18.0'
 
     // logging
-    compile 'ch.qos.logback:logback-core:1.1.+'
-    compile 'ch.qos.logback:logback-classic:1.1.+'
+    compile 'org.slf4j:slf4j-api:1.7.7'
+    compile 'ch.qos.logback:logback-core:1.1.3'
+    compile 'ch.qos.logback:logback-classic:1.1.3'
 
     // testing
-    testCompile 'junit:junit:4.+'
-    testCompile 'com.google.truth:truth:0.+'
+    testCompile 'junit:junit:4.12'
+    testCompile 'com.google.truth:truth:0.27'
 }
