--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'signing'
 
 group = 'de.vorb'
 archivesBaseName = 'property-providers'
-version = '1.0.0'
+version = '2.0.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
