Set version to 2.0.0

--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'signing'
 
 group = 'de.vorb'
 archivesBaseName = 'property-providers'
-version = '2.0.0-SNAPSHOT'
+version = '2.0.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
